signin.py modified plus dependancies

--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -80,23 +80,24 @@
         .btn, .btn:hover {
             background-color: black;
             color: white;
+            border: none;
+            border-radius: 8px;
             padding: 7px 0;
             font-size: medium;
             font-weight: bold;
             text-decoration: none;
             cursor: pointer;
-            border-radius: 8px;
-            border: none;
         }
         .btnalt, .btnalt:hover {
-            border-radius: 8px;
             background-color: white;
             color: black;
             border: 1px solid black;
+            border-radius: 8px;
             padding: 7px 0;
             font-size: medium;
             font-weight: bold;
             text-decoration: none;
+            cursor: pointer;
         }
         @media only screen and (max-width: 767px) {
             form {
