subscribe.py mod

--- a/account/templates/registration/signin.html
+++ b/account/templates/registration/signin.html
@@ -45,7 +45,7 @@ Login
 
     <input type="submit" name="login" class="btn" value="Log in">
     <!-- <input type="submit" name="loginalt" class="btnalt" value="Log in without password"> -->
-    <button class="btnalt">Log in without password</button>
+    <!-- <button class="btnalt">Log in without password</button> -->
     <!-- <p style="text-align: center;">Don't have an account? <a href="{% url 'account:subscribe' %}">Sign up</a></p> -->
 
 </form>
