--- a/core/templates/core/serverError.html
+++ b/core/templates/core/serverError.html
@@ -9,11 +9,11 @@
 
 {% block body %}
 <div style="margin: 7% 2% 7% 2%;">
-    <h3 style="color: #fff;">Server Error</h3>
+    <h3 style="color: #fff;">IT'S NOT YOU, IT'S US</h3>
     <br/>
 
     <div>
-        <p style="color: #fff;">The query you have requested was not found. We apologize for any inconvenience. From here you can return to the homepage.</p>
+        <p style="color: #fff;">We apologize for any inconvenience. From here you can return to the homepage.</p>
         <br/>
         <a href="{% url 'core:index' %}" style="color: red; font-weight: bolder;">Go Back Home</a>
     </div>
