--- a/account/templates/account/subscribe.html
+++ b/account/templates/account/subscribe.html
@@ -21,10 +21,10 @@ Subscribe
         {% endfor %}
         {% if sess_email %}
         <a href="{% url 'account:auth' %}">
-            <input type="email" name="email" class="forminput2"  value="{{ sess_email }}" readonly>
+            <input type="text" name="email" class="forminput2"  value="{{ sess_email }}" readonly>
         </a>
         {% else %}
-        <input type="email" name="email" class="forminput" required>
+        <input type="text" name="email" class="forminput" required>
         {% endif %}
     </div>
     
@@ -45,7 +45,7 @@ Subscribe
         {% for error  in form.password.errors %}
         <span class="formerror">*{{error}}</span>
         {% endfor %}
-        <input type="password" name="password" class="forminput">
+        <input type="password" name="password" class="forminput" required>
     </div>
 
     {% if form.non_field_errors %}
