--- a/core/static/core/homepage.css
+++ b/core/static/core/homepage.css
@@ -100,16 +100,14 @@ a:hover {
 #imagediv {
     position: absolute;
     bottom: 7%;
-    left: 10%;
+    left: 20px;
     width: 100%;
     /* display: grid;
     place-items: center; */
 }
 #image {
-    /* border-radius: 50%; */
-    /* border: 1px #c2c2c28f solid; */
     max-width: 7em;
-    /* padding: 0.3em; */
+    opacity: 0.7;
 }
 #intro {
     position: absolute;
