--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -49,7 +49,7 @@
                         <!-- <a href="https://soundcloud.com/lerb-fanbase" target="_blank" >MIXES</a> -->
                         <a href="https://ra.co/dj/lerb/" target="_blank" >TOUR DATES</a>
                         <a href="https://medium.com/@leroybuliro" target="_blank" >BLOG</a>
-                        <a href="https://anchor.fm/kubonga" target="_blank" >PODCAST</a>
+                        <a href="https://podcasts.apple.com/us/podcast/kubonga-show/id1470474649" target="_blank" >PODCAST</a>
                         {% if user.is_authenticated %}
                         <a href="{% url 'account:logout' %}">LOG OUT</a>
                         {% else %}
@@ -69,16 +69,9 @@
                         <span>Hi {{ request.user.alias }}. We are still getting things ready for you.</span>
                         {% endif %}
                     </div>
-                    {% endif %}
-
-                    <!-- <div id="bio">
-                        <p>deejay ◊ storyteller ◊ consultant ◊ developer</p>
-                    </div> -->
-                                        
+                    {% endif %}                                        
                 </section>
-
                 <video src="{% static 'core/media/intro.mp4' %}" autoplay muted loop></video>
-
             </div>
         </div>
     </body>
