--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -48,10 +48,8 @@
                     <div id="intro">
                         {% if user.is_staff %}
                         <span>Logged in as @{{ request.user.alias }}</span>
-                        {% if user.is_deactivated %}
-                        <span>Hi {{ request.user.alias }}. Your account is deactivated. Kindly check your email for an activation link to fully enjoy the features of the site.</span>
                         {% else %}
-                        <span>Hi {{ request.user.alias }}. We are still getting things ready for you.</span>
+                        <span>Hi {{ request.user.full_name }}. We are still getting things ready for you.</span>
                         {% endif %}
                     </div>
                     {% endif %}                                        
