--- a/account/templates/account/emailActivation.html
+++ b/account/templates/account/emailActivation.html
@@ -6,7 +6,7 @@ Hey, {{name}}
 
 An account has been created for you at Leroy Buliro's official website. Please follow the link below to activate your account.
 
-Activation Link >> http://{{siteURI}}{% url 'activate' uidcoded=uid token=token %}
+Activation Link >> http://{{siteURI}}{% url 'account:activate' uidcoded=uid token=token %}
 
 If you received this email in error, you can safely ignore this email.
 
