--- a/core/static/core/homepage.css
+++ b/core/static/core/homepage.css
@@ -111,13 +111,14 @@ a:hover {
 }
 #intro {
     position: absolute;
-    top: 2%;
+    top: 4%;
     width: 100%;
 }
 #intro span {
     padding: 4px;
     background-color: #000000;
     color: #ffd900;
+    text-align: center;
     font-family: Josefin Sans;
     font-size: small;
     font-weight: bolder;
