--- a/account/templates/account/subscribe.html
+++ b/account/templates/account/subscribe.html
@@ -68,9 +68,9 @@ Subscribe
     </div>
     {% endif %}
 
-    <div style="text-align: center;">
+    <!-- <div style="text-align: center;">
         <p style="font-size: small;">By clicking Sign up, you agree to our <a href="{% url 'core:legal' %}" style="text-decoration: none; color: #5e5cd4; font-size: small;">terms of service, and privacy policy</a>.</p>
-    </div>
+    </div> -->
 
     <input type="submit" name="CreateAccount" class="btn" value="Sign up">
 
