google analytics injection

--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -39,6 +39,15 @@
               "keywords": "Leroy Buliro, Kenya, Nairobi, booze, travel, nightlife, food, lifestyle, culture",
             }
         </script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-SM4DMZTFCP"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-SM4DMZTFCP');
+        </script>
     </head>
     <body>
         <div class="container">
