--- a/core/static/core/base.css
+++ b/core/static/core/base.css
@@ -21,12 +21,6 @@
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
-body {
-    background-color: #000000;
-    overflow: hidden;
-    overflow-y: scroll;
-    position: relative;
-}
 
 p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
     font-family: Josefin Sans;
@@ -224,9 +218,8 @@ footer {
     display: flex;
     grid-gap: 10px;
 }
-footer a,
-footer a:hover {
-    color: #FFFFFF;
+footer a, a:hover {
+    color: #000000;
     font-size: 11px;
     text-decoration: none;
 }
