--- a/core/static/core/error.css
+++ b/core/static/core/error.css
@@ -35,7 +35,7 @@ p, a, h1, h2, h3, h4, h5, h6 {
 /* Menu */
 #errContainer {
     width: 100%;
-    margin-top: 30%;
+    margin-top: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -48,37 +48,9 @@ p, a, h1, h2, h3, h4, h5, h6 {
     height: auto;
 }
 
-/* Footer */
-footer {
-    border-top: 1px solid silver;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1% 2%;
-    clear: both;
-}
-#footersocial {
-    display: flex;
-    grid-gap: 10px;
-}
-footer a,
-footer a:hover {
-    color: #FFFFFF;
-    font-size: 11px;
-    text-decoration: none;
-}
 @media screen and (max-width: 769px) {
     .logoimg {
         width: 40%;
         height: auto;
-    }
-    footer {
-        padding: 3% 1%;
-        flex-direction: column;
-        grid-gap: 10px;
     }
 }
