--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,6 +1,4 @@
 {% load static %}
-{% load social_share %}
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -46,7 +44,7 @@
         </script>
         <!-- Load js file -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script src="{% static 'core/base.js' %}"></script>
+        <script src="{% static 'core/main.js' %}"></script>
         {% block script %}
         {% endblock script %}
     </head>
@@ -58,8 +56,10 @@
                 <img class="logoimg" src="{% static 'core/media/lbwhite.png' %}" alt="logo">
             </a>
             
-            {% block navmenu %}
-            {% endblock navmenu %}
+            <div class="navmenu">    
+                {% block navmenu %}
+                {% endblock navmenu %}
+            </div>
             
             <div class="access">
                 {% if user.is_authenticated %}
@@ -74,25 +74,26 @@
             </div>
         </nav>
         
-        {% block mobmenu %}
-        {% endblock mobmenu %}        
+        <div class="mobile-menu">
+            {% block mobilemenu %}
+            {% endblock mobilemenu %}        
+        </div>
         
-        {% block body %}
-        {% endblock body %}
+        {% block page %}
+        {% endblock page %}
         
         <footer>
             <div id="footersocial">
-                <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconTT.png' %}" alt="twitter" width="auto" height="22" ></a>
-                <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG.png' %}" alt="instagram" width="auto" height="22" ></a>
+                <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconTT-black.png' %}" alt="twitter" width="auto" height="22" ></a>
+                <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG-black.png' %}" alt="instagram" width="auto" height="22" ></a>
             </div>
-            <a>© 2022 Leroy Buliro. All rights reserved.</a>
+            <a style="color: #000000;">© 2022 Leroy Buliro. All rights reserved.</a>
             <span>
-                <a href="{% url 'core:legal' %}">Legal</a>
+                <a href="{% url 'core:legal' %}" style="color: #000000;">Legal</a>
             </span>
         </footer>
     </body>
     
-    {% add_pinterest_script %}
     <noscript>
         <div style="display: flex; place-content: center;">
             <p>Javascript not supported on your browser, please enable Javascript in order to fully utilize the website</p>
