--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -67,7 +67,11 @@
                         <!-- <a href="https://soundcloud.com/lerb-fanbase" target="_blank" >MIXES</a> -->
                         <a href="https://ra.co/dj/lerb/" target="_blank" >TOUR DATES</a>
                         <a href="https://medium.com/@leroybuliro" target="_blank" >BLOG</a>
+                        {% if user.is_admin %}
+                        <a href="{% url 'core:podcast' %}">PODCAST</a>
+                        {% else %}
                         <a href="https://podcasts.apple.com/us/podcast/kubonga-show/id1470474649" target="_blank" >PODCAST</a>
+                        {% endif %}
                         {% if user.is_authenticated %}
                         <a href="{% url 'account:logout' %}">LOG OUT</a>
                         {% else %}
