--- a/account/templates/account/emailActivation.html
+++ b/account/templates/account/emailActivation.html
@@ -1,13 +1,13 @@
 {% autoescape on %}
-Account Registration
+<h3 style="text-align: center;">Registration</h3>
 
-
-Hey, {{name}}
+Hi {{name}},
 
 An account has been created for you at Leroy Buliro's official website. Please follow the link below to activate your account.
 
 Activation Link >> http://{{siteURI}}{% url 'account:activate' uidcoded=uid token=token %}
 
-If you received this email in error, you can safely ignore this email.
+If you received this email in error, you can safely ignore it.
 
+The LERB Team.
 {% endautoescape %}
