--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -80,9 +80,10 @@
         .btn, .btn:hover {
             background-color: black;
             color: white;
-            border: none;
+            border: 1px solid black;
             border-radius: 8px;
-            padding: 7px 0;
+            padding: 4px 0;
+            font-family: CrimsonPro;
             font-size: medium;
             font-weight: bold;
             text-decoration: none;
@@ -93,9 +94,11 @@
             color: black;
             border: 1px solid black;
             border-radius: 8px;
-            padding: 7px 0;
+            padding: 4px 0;
+            font-family: CrimsonPro;
             font-size: medium;
             font-weight: bold;
+            text-align: center;
             text-decoration: none;
             cursor: pointer;
         }
