--- a/account/templates/registration/signin.html
+++ b/account/templates/registration/signin.html
@@ -30,7 +30,7 @@ Login
         {% for error  in form.password.errors %}
         <span class="formerror">*{{ error }}</span>
         {% endfor %}
-        <input type="password" name="password" class="forminput">
+        <input type="password" name="password" class="forminput" required>
     </div>
 
     {% if form.non_field_errors %}
@@ -42,8 +42,7 @@ Login
     {% endif %}
 
     <input type="submit" name="login" class="btn" value="Log in">
-    <!-- <input type="submit" name="loginalt" class="btnalt" value="Log in without password"> -->
-    <!-- <button class="btnalt">Log in without password</button> -->
+    <a class="btnalt">Log in without password</a>
     <!-- <p style="text-align: center;">Don't have an account? <a href="{% url 'account:subscribe' %}">Sign up</a></p> -->
 
 </form>
