authentication backend updated

--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -84,7 +84,7 @@
             border-radius: 8px;
             padding: 4px 0;
             font-family: CrimsonPro;
-            font-size: medium;
+            font-size: 17px;
             font-weight: bold;
             text-decoration: none;
             cursor: pointer;
@@ -96,7 +96,7 @@
             border-radius: 8px;
             padding: 4px 0;
             font-family: CrimsonPro;
-            font-size: medium;
+            font-size: 17px;
             font-weight: bold;
             text-align: center;
             text-decoration: none;
