--- a/account/templates/account/signin.html
+++ b/account/templates/account/signin.html
@@ -2,11 +2,11 @@
 {% load static %}
 
 {% block pagetitle %}
-Reset Account
+Login
 {% endblock pagetitle %}
 
 {% block pageheader %}
-<h3 style="text-align: center;">Reset your account</h3>
+<h3 style="text-align: center;">Log into your account</h3>
 {% endblock pageheader %}
 
 {% block form %}
@@ -25,6 +25,14 @@ Reset Account
         {% endif %}
     </div>
 
+    <div>
+        <span class="formlabel">{{ form.password.label }}</span>
+        {% for error  in form.password.errors %}
+        <span class="formerror">*{{ error }}</span>
+        {% endfor %}
+        <input type="password" name="password" class="forminput" required>
+    </div>
+
     {% if form.non_field_errors %}
     <div>
         {% for error in form.non_field_errors %}
@@ -33,7 +41,9 @@ Reset Account
     </div>
     {% endif %}
 
-    <input type="submit" name="login" class="btn" value="Continue">
+    <input type="submit" name="login" class="btn" value="Log in">
+    <a class="btnalt" href="{% url 'account:signinalt' %}">Log in without password</a>
+    <!-- <p style="text-align: center;">Don't have an account? <a href="{% url 'account:subscribe' %}">Sign up</a></p> -->
 
 </form>
 {% endblock form %}
