--- a/account/templates/emails/emailActivation.html
+++ b/account/templates/emails/emailActivation.html
@@ -7,5 +7,6 @@ Activation Link >> http://{{siteURI}}{% url 'account:activate' uidcoded=uid toke
 
 If you received this email in error, you can safely ignore it.
 
+Happy scrolling,
 The LERB Team.
 {% endautoescape %}
