--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -2,21 +2,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!-- site meta tags-->
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <link rel="icon" type="image/png" href="{% static 'core/media/favicon.ico' %}"/>
-        <meta name="author" content="Leroy Buliro">
-        <link rel="canonical" href="https://leroybuliro.com/">
-        <meta name="docsearch:language" content="en">
+        <meta name="author" content="Leroy Buliro"/>
         {% block head %}
         {% endblock head %}
-        <!-- Load css file -->
-        <link rel="stylesheet" href="{% static 'core/base.css' %}">
-        <!-- <link rel="stylesheet" href="{% static 'core/feedbackModal.css' %}"> -->
-        <!-- Load js file -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <link rel="stylesheet" href="{% static 'core/base.css' %}"/>
         <script src="{% static 'core/main.js' %}"></script>
         <script type="application/ld+json">
             {
