--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -3,9 +3,9 @@
 
 {% block head %}
 <title>Kubonga Show | A Leroy Buliro podcast</title>
-<meta name="description" content='Translated to "talk" in Swahili slang - "Kubonga" is a seasonal, meandering conversation with guests where they tell their stories, converse on topics close to their heart and, yeah, just have a nice chat.'>
-<meta name="keyword" content="Kenya, lifestyle, culture">
-<link rel="stylesheet" href="{% static 'core/podcast.css' %}">
+<meta name="description" content='Translated to "talk" in Swahili slang - "Kubonga" is a seasonal, meandering conversation with guests where they tell their stories, converse on topics close to their heart and, yeah, just have a nice chat.'/>
+<meta name="keyword" content="Kenya, lifestyle, culture"/>
+<link rel="stylesheet" href="{% static 'core/podcast.css' %}"/>
 {% endblock head %}
 
 {% block navmenu %}
