--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -27,7 +27,7 @@
             <h2>About</h2>
             <p class="pod-deet">Translated to "talk" in Swahili slang - "Kubonga" is a seasonal, meandering conversation with guests where they tell their stories, converse on topics close to their heart and, yeah, just have a nice chat</p>
             <div>
-                <h4>LISTEN ON AN APP</h4>
+                <h4>LISTEN & SUBSCRIBE</h4>
                 <br/>
                 <div class="podurls">
                     
