--- a/account/templates/account/pwdreset.html
+++ b/account/templates/account/pwdreset.html
@@ -2,11 +2,11 @@
 {% load static %}
 
 {% block pagetitle %}
-Enter your Email
+Enter your email
 {% endblock pagetitle %}
 
 {% block pageheader %}
-<h3 style="text-align: center;">Log in without a password</h3>
+<h3 style="text-align: center;">Reset password</h3>
 {% endblock pageheader %}
         
 {% block form %}
