--- a/account/templates/emails/emailPwdReset.html
+++ b/account/templates/emails/emailPwdReset.html
@@ -7,6 +7,8 @@ http://{{siteURI}}{% url 'account:reset2' uidcoded=uid token=token %}
 
 The link will expire in 24hrs.
 
+If you didn't request a login link, feel free to delete this email and carry on!
+
 Thanks,
 The LERB Team.
 {% endautoescape %}
