refactoring account controllers

--- a/account/templates/emails/emailPwdReset.html
+++ b/account/templates/emails/emailPwdReset.html
@@ -7,7 +7,7 @@ http://{{siteURI}}{% url 'account:reset2' uidcoded=uid token=token %}
 
 The link will expire in 24hrs.
 
-If you didn't request a login link, feel free to delete this email and carry on!
+If you didn't request for a password change, feel free to delete this email and carry on!
 
 Thanks,
 The LERB Team.
