refactoring account controllers

--- a/account/templates/emails/emailPwdReset.html
+++ b/account/templates/emails/emailPwdReset.html
@@ -9,6 +9,6 @@ The link will expire in 24hrs.
 
 If you didn't request for a password change, feel free to delete this email and carry on!
 
-Thanks,
+See you soon,
 The LERB Team.
 {% endautoescape %}
