--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -80,10 +80,10 @@
                         <img id="image" src="{% static 'core/media/lbwhite.png' %}" alt="leroy">
                     </div>
                     
+                    <button class="feedbackBtn">Feedback</button>
                 </section>
                 <video src="{% static 'core/media/intro.mp4' %}" autoplay muted loop></video>
             </div>
-            <span class="feedbackBtn">Feedback</span>
         </div>
     </body>
 </html>
