--- a/static/core/homepage.css
+++ b/static/core/homepage.css
@@ -97,18 +97,6 @@ a:hover {
     text-decoration: none;
     font-size: 24px;
 }
-#imagediv {
-    position: absolute;
-    bottom: 7%;
-    left: 20px;
-    width: 100%;
-    /* display: grid;
-    place-items: center; */
-}
-#image {
-    max-width: 7em;
-    opacity: 0.7;
-}
 #intro {
     position: absolute;
     top: 4%;
@@ -141,18 +129,30 @@ a:hover {
     text-decoration: none;
     color: #ffffffc4;
 }
+#imagediv {
+    position: absolute;
+    bottom: 7%;
+    left: 20px;
+    width: 100%;
+    /* display: grid;
+    place-items: center; */
+}
+#image {
+    max-width: 7em;
+    opacity: 0.7;
+}
 .feedbackBtn {
     display: inline;
-    position: relative;
-    bottom: 0;
-    right: 80%;
-    padding: 4px 8px 4px 8px;
-    background-color: #35a731b7;
-    color: #000000;
+    position: absolute;
+    bottom: -12px;
+    right: 20px;
+    border-radius: 4px 4px;
+    padding: 4px 10px 20px 10px;
+    background-color: #000000b7;
+    color: #ffffff;
     font-family: CrimsonPro;
     font-size: 14px;
-    /* box-shadow: #000; */
-    box-shadow: 3px 3px red, -1em 0 .4em olive;
+    font-weight: normal;
     z-index: 2;
 }
 
