--- a/account/templates/account/pwdreset.html
+++ b/account/templates/account/pwdreset.html
@@ -6,7 +6,7 @@ Enter your email
 {% endblock pagetitle %}
 
 {% block pageheader %}
-<h3 style="text-align: center;">Reset password</h3>
+<h3 style="text-align: center;">Reset your password</h3>
 {% endblock pageheader %}
         
 {% block form %}
@@ -23,6 +23,6 @@ Enter your email
         {% endif %}
     </div>
 
-    <input type="submit" name="send" class="btn" value="Send link">
+    <input type="submit" name="send" class="btn" value="Send password reset email">
 </form>
 {% endblock form %}
