--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -28,6 +28,7 @@
         <!-- Load css file -->
         <link rel="stylesheet" href="{% static 'core/homepage.css' %}">
         <link rel="stylesheet" href="{% static 'core/feedbackModal.css' %}">
+        <script src="{% static 'core/main.js' %}"></script>
         <script type="application/ld+json">{
             "@context": "http://schema.org",
             "@type": "WebSite",
@@ -68,7 +69,7 @@
                     <div id="links">
                         <!-- <a href="https://soundcloud.com/lerb-fanbase" target="_blank" >MIXES</a> -->
                         <a href="https://ra.co/dj/lerb/" target="_blank" >TOUR DATES</a>
-                        <a href="https://medium.com/@leroybuliro" target="_blank" >BLOG</a>
+                        <a href="#" style="text-decoration: line-through;">BLOG</a>
                         <a href="{% url 'core:podcast' %}">PODCAST</a>
                         {% if user.is_authenticated %}
                         <a href="{% url 'account:logout' %}">LOG OUT</a>
