--- a/static/core/homepage.css
+++ b/static/core/homepage.css
@@ -146,10 +146,10 @@ a:hover {
     display: inline;
     position: absolute;
     bottom: 20%;
-    right: -10px;
+    right: -8%;
     border: none;
     border-radius: 4px 4px;
-    padding: 4px 10px 20px 10px;
+    padding: 7px 10px 7px 10px;
     background-color: #000000b7;
     color: #ffffff;
     font-family: CrimsonPro;
