--- a/static/core/homepage.css
+++ b/static/core/homepage.css
@@ -133,7 +133,8 @@ a:hover {
     display: inline;
     position: absolute;
     bottom: 20%;
-    right: -8%;
+    right: -20px;
+    margin: 0;
     border: none;
     border-radius: 4px 4px;
     padding: 7px 10px 12px 10px;
