--- a/core/static/core/homepage.css
+++ b/core/static/core/homepage.css
@@ -71,7 +71,7 @@ section {
     text-align: center;
     grid-gap: 10px;
 }
-a {
+a, a:hover {
     font-family: Indie;
     font-size: 20px;
     font-weight: 900;
@@ -79,10 +79,6 @@ a {
     text-decoration: none;
     color: #ffd900;
     cursor: pointer;
-}
-a:hover {
-    text-decoration: none;
-    font-size: 24px;
 }
 #intro {
     position: absolute;
@@ -125,16 +121,15 @@ a:hover {
     place-items: center; */
 }
 #image {
-    max-width: 7em;
+    max-width: 5em;
     opacity: 0.7;
 }
 .feedbackBtn {
     cursor: pointer;
     display: inline;
     position: absolute;
-    bottom: 20%;
-    right: -20px;
-    margin: 0;
+    bottom: 7%;
+    right: -3%;
     border: none;
     border-radius: 4px 4px;
     padding: 7px 10px 12px 10px;
@@ -156,5 +151,8 @@ a:hover {
     }  
     #image {
         max-width: 4em;
+    }
+    .feedbackBtn {
+        right: -8%;
     }
 }
