--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -59,7 +59,7 @@
                         {% if user.is_staff %}
                         <span>Logged in as @{{ request.user.alias }}</span>
                         {% elif user.is_verified %}
-                        <span>Hi {{ request.user.full_name }}. We are still getting things ready for you.</span>
+                        <span>Hi {{ request.user.full_name }}. We are still getting things ready for you. You shall receive updates on future feature updates. Stay Tuned!!.</span>
                         {% else %}
                         <span>Hi {{ request.user.full_name }}. Check your email for a verification link to fully enjoy the features of the website.</span>
                         {% endif %}
