--- a/core/static/core/homepage.css
+++ b/core/static/core/homepage.css
@@ -69,12 +69,13 @@ section {
     border-radius: 4px;
     border: 3px solid gray;
     background-color: #000000;
-}
-#intro p {
-    padding: 4px;
+    display: flex;
     flex-wrap: nowrap;
     -ms-flex-wrap: nowrap;
     -moz-flex-wrap: nowrap;
+}
+#intro p {
+    padding: 4px;
     color: #ffd900;
     text-align: center;
     font-family: Josefin Sans;
