--- a/core/static/core/homepage.css
+++ b/core/static/core/homepage.css
@@ -71,11 +71,7 @@ section {
     background-color: #000000;
 }
 #intro p {
-    display: inline-flex;
-    width: 100%;
-    /* flex-wrap: nowrap;
-    -ms-flex-wrap: nowrap;
-    -moz-flex-wrap: nowrap; */
+    overflow-x: hidden;
     padding: 8px 4px;
     color: #ffd900;
     font-family: Josefin Sans;
