--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load social_share %}
 
-{% block meta %}
+{% block head %}
 <title>{{ article.title }} | A-Z Logs, a blog by Leroy Buliro</title>
 <meta name="description" content="{{ article.extract }}">
 <meta name="keyword" content="{{episode.tags}}">
@@ -24,41 +24,26 @@
 <meta property="og:image:type" content="image/png">
 <meta property="og:image:width" content="1000">
 <meta property="og:image:height" content="500">
-{% endblock meta %}
-
-{% block style %}
 <link rel="stylesheet" href="{% static 'core/articlelayout.css' %}">
-{% endblock style %}
-
-{% block script %}
-<script src="{% static 'core/articlelayout.js' %}"></script>
-{% endblock script %}
+{% endblock head %}
 
 {% block navmenu %}
-<div class="navmenu">
-    <!-- <a href="{% url 'core:index' %}">HOME</a> -->
-    <a  href="{% url 'core:event' %}">EVENTS</a>
-    <a href="{% url 'core:blogpage' %}">BLOG</a>
-    <a href="{% url 'core:podcast' %}">PODCAST</a>
-</div>
+<!-- <a href="{% url 'core:index' %}">HOME</a> -->
+<a href="{% url 'core:blog' %}">BLOG</a>
+<a href="{% url 'core:podcast' %}">PODCAST</a>
 {% endblock navmenu %}
 
-{% block mobmenu %}
-<div class="mobile-menu">
-    <!-- <a href="{% url 'core:index' %}">HOME</a> -->
-    <a href="{% url 'core:event' %}">EVENTS</a>
-    <a href="{% url 'core:blogpage' %}">BLOG</a>
-    <a href="{% url 'core:podcast' %}">PODCAST</a>
-</div>
-{% endblock mobmenu %}
+{% block mobilemenu %}
+<!-- <a href="{% url 'core:index' %}">HOME</a> -->
+<a href="{% url 'core:blog' %}">BLOG</a>
+<a href="{% url 'core:podcast' %}">PODCAST</a>
+{% endblock mobilemenu %}
 
 {% block body %}
-
 <div class="articlepage">
-
     <article>
         <section class="articlemeta">
-            <img src="{{ article.featureimage.url }}" alt="{{ article.title }}" height="720" width="480" style="height: auto; width: 100%; object-fit: cover;">
+            <img src="{{ article.featureimageURI }}" alt="{{ article.title }}" height="720" width="480" style="height: auto; width: 100%; object-fit: cover;">
             <div class="meta">
                 <p style="color: #000; font-family: CrimsonPro; font-size:48px; font-weight: bold; text-align: center; line-height: 1rem;">A-Z LOGS</p>
                 <div id="category">{{ article.category }}</div>
@@ -243,5 +228,17 @@
 
     </div>
 </div>
-
 {% endblock body %}
+
+{% block footer %}
+<footer>
+    <div id="footersocial">
+        <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconTT-white.png' %}" alt="twitter" width="auto" height="22" ></a>
+        <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG-white.png' %}" alt="instagram" width="auto" height="22" ></a>
+    </div>
+    <a style="color: #fff;">© 2022 Leroy Buliro. All rights reserved.</a>
+    <span>
+        <a href="{% url 'core:legal' %}" style="color: #fff;">Legal</a>
+    </span>
+</footer>
+{% endblock footer %}
