--- a/core/static/core/articlelayout.css
+++ b/core/static/core/articlelayout.css
@@ -18,6 +18,9 @@
     src: url('/static/core/fonts/PermanentMarker-Regular.ttf') format('truetype');
     font-weight: 700;
 }
+.pagebody {
+    background-color: #000;
+}
 .articlepage {
     display: flex;
     flex-direction: column;
@@ -392,4 +395,32 @@
 }
 @media (min-width:993px) {
     .Cmodal-content{width:900px}
+}
+
+/* Footer */
+
+footer {
+    border-top: 1px solid silver;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1% 2%;
+    clear: both;
+}
+#footersocial {
+    display: flex;
+    grid-gap: 10px;
+}
+footer a, a:hover {
+    color: #fff;
+    font-size: 11px;
+    text-decoration: none;
+}
+@media screen and (max-width: 769px) {
+    footer {
+        padding: 3% 1%;
+        flex-direction: column;
+        grid-gap: 10px;
+    }
 }
