--- a/static/core/podcast.css
+++ b/static/core/podcast.css
@@ -96,3 +96,31 @@ body {
         height: 80px;
     }
 }
+
+/* Footer */
+
+footer {
+    border-top: 1px solid silver;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1% 2%;
+    clear: both;
+}
+#footersocial {
+    display: flex;
+    grid-gap: 10px;
+}
+footer a, a:hover {
+    color: #000000;
+    font-size: 11px;
+    text-decoration: none;
+}
+@media screen and (max-width: 769px) {
+    footer {
+        padding: 3% 1%;
+        flex-direction: column;
+        grid-gap: 10px;
+    }
+}
