--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -25,6 +25,7 @@
 <meta property="og:image:width" content="1000">
 <meta property="og:image:height" content="500">
 <link rel="stylesheet" href="{% static 'core/articlelayout.css' %}">
+<link rel="stylesheet" href="{% static 'core/feedbackModal.css' %}">
 {% endblock head %}
 
 {% block navmenu %}
@@ -39,12 +40,16 @@
 <a href="{% url 'core:podcast' %}">PODCAST</a>
 {% endblock mobilemenu %}
 
-{% block body %}
+{% block page %}
 <div class="articlepage">
     <article>
         <section class="articlemeta">
+            {% if article.featureimageURI %}
             <img src="{{ article.featureimageURI }}" alt="{{ article.title }}" height="720" width="480" style="height: auto; width: 100%; object-fit: cover;">
-            <div class="meta">
+            {% else %}
+            <img src="{{ article.featureimage.url }}" alt="{{ article.title }}" height="720" width="480" style="height: auto; width: 100%; object-fit: cover;">
+            {% endif %}
+            <div class="meta" style="background-color: #ffca52;">
                 <p style="color: #000; font-family: CrimsonPro; font-size:48px; font-weight: bold; text-align: center; line-height: 1rem;">A-Z LOGS</p>
                 <div id="category">{{ article.category }}</div>
                 <div id="title">{{ article.title }}</div>
@@ -228,13 +233,13 @@
 
     </div>
 </div>
-{% endblock body %}
+{% endblock page %}
 
 {% block footer %}
 <footer>
     <div id="footersocial">
-        <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconTT-white.png' %}" alt="twitter" width="auto" height="22" ></a>
-        <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG-white.png' %}" alt="instagram" width="auto" height="22" ></a>
+        <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconTT.png' %}" alt="twitter" width="auto" height="22" ></a>
+        <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG.png' %}" alt="instagram" width="auto" height="22" ></a>
     </div>
     <a style="color: #fff;">© 2022 Leroy Buliro. All rights reserved.</a>
     <span>
