--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -10,6 +10,7 @@
         {% endblock head %}
         <link rel="stylesheet" href="{% static 'core/base.css' %}"/>
         <script src="{% static 'core/main.js' %}"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script type="application/ld+json">
             {
                 "@context": "https://schema.org",
