--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -22,12 +22,8 @@
 <meta property="og:image:type" content="image/png">
 <meta property="og:image:width" content="1000">
 <meta property="og:image:height" content="500">
-
-<!-- Load css file -->
-<!-- <link rel="stylesheet" href="{% static 'core/feedbackModal.css' %}"> -->
+<link rel="stylesheet" href="{% static 'core/feedbackModal.css' %}">
 <link rel="stylesheet" href="{% static 'core/blog.css' %}">
-
-<!-- Load js file -->
 <script type="application/ld+json">
     {
         "@context": "https://schema.org",
@@ -53,11 +49,6 @@
         ]
     }
 </script>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
-<script src="{% static 'core/base.js' %}"></script>
-<script src="{% static 'core/blog.js' %}"></script>
 {% endblock head %}
 
 {% block navmenu %}
@@ -85,12 +76,12 @@
             {% for article in articles %}
             <section class="articlediv" style="border: 1px solid #ccc; border-radius: 2%;">
                 <a href="{% url 'core:article' pk=article.id slug=article.slug %}">                    
-                    <div class="articlesec" style="margin: 3%; display: grid; grid-column: 1fr; grid-gap: 10px; cursor: pointer;">
+                    <div class="articlesec">
                         <div style="width: 100%; height: auto; object-fit: cover;">
-                            {% if article.featureimage %}
-                            <img  class="blogimage" src="{{ article.featureimage.url }}" alt="{{ article.title }}">
-                            {% else %}
+                            {% if article.featureimageURI %}
                             <img  class="blogimage" src="{{ article.featureimageURI }}" alt="{{ article.title }}">
+                            {% else %}
+                            <img  class="blogimage" src="{{ article.featureimage.url }}" alt="{{ article.title }}">
                             {% endif %}
                         </div>
                         <div class="blogmeta">
@@ -120,8 +111,8 @@
 {% block footer %}
 <footer>
     <div id="footersocial">
-        <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconTT-white.png' %}" alt="twitter" width="auto" height="22" ></a>
-        <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG-white.png' %}" alt="instagram" width="auto" height="22" ></a>
+        <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconTT.png' %}" alt="twitter" width="auto" height="22" ></a>
+        <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG.png' %}" alt="instagram" width="auto" height="22" ></a>
     </div>
     <a style="color: #fff;">© 2022 Leroy Buliro. All rights reserved.</a>
     <span>
