--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -9,13 +9,13 @@
 {% endblock head %}
 
 {% block navmenu %}
-<a href="https://medium.com/@leroybuliro" target="_blank" >BLOG</a>
+<a href="{% url 'core:blog' %}">BLOG</a>
 <a id="menuactive">PODCAST</a>
 {% endblock navmenu %}
 
 {% block mobilemenu %}
 <a href="{% url 'core:index' %}" >HOME</a>
-<a href="https://medium.com/@leroybuliro" target="_blank" >BLOG</a>
+<a href="{% url 'core:blog' %}">BLOG</a>
 <a href="#">PODCAST</a>
 {% endblock mobilemenu %}
 
