--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -29,13 +29,13 @@
 {% endblock head %}
 
 {% block navmenu %}
-<!-- <a href="{% url 'core:index' %}">HOME</a> -->
+<a href="{% url 'core:index' %}">HOME</a>
 <a href="{% url 'core:blog' %}">BLOG</a>
 <a href="{% url 'core:podcast' %}">PODCAST</a>
 {% endblock navmenu %}
 
 {% block mobilemenu %}
-<!-- <a href="{% url 'core:index' %}">HOME</a> -->
+<a href="{% url 'core:index' %}">HOME</a>
 <a href="{% url 'core:blog' %}">BLOG</a>
 <a href="{% url 'core:podcast' %}">PODCAST</a>
 {% endblock mobilemenu %}
