--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -52,13 +52,13 @@
 {% endblock head %}
 
 {% block navmenu %}
-<!-- <a  href="{% url 'core:index' %}">HOME</a> -->
+<a  href="{% url 'core:index' %}">HOME</a>
 <a id="menuactive">BLOG</a>
 <a href="{% url 'core:podcast' %}">PODCAST</a>
 {% endblock navmenu %}
 
 {% block mobilemenu %}
-<!-- <a href="{% url 'core:index' %}">HOME</a> -->
+<a href="{% url 'core:index' %}">HOME</a>
 <a href="#">BLOG</a>
 <a href="{% url 'core:podcast' %}">PODCAST</a>
 {% endblock mobilemenu %}
