--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -9,6 +9,7 @@
 {% endblock head %}
 
 {% block navmenu %}
+<a href="{% url 'core:index' %}" >HOME</a>
 <a href="{% url 'core:blog' %}">BLOG</a>
 <a id="menuactive">PODCAST</a>
 {% endblock navmenu %}
