--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -29,7 +29,7 @@
 <script>
     document.addEventListener('DOMContentLoaded', ()=>{
         // ARTICLE PAGE
-        document.body.querySelector('.meta').addEventListener('load', ()=> {
+        document.querySelector('.meta').addEventListener('load', ()=> {
             const background = document.querySelector('.meta');
             const choices = ['#86baaf', '#ffca52'];
             const randomNumber = Math.floor(Math.random()*2);
