--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -75,25 +75,23 @@
         <div id="blogs">
             {% for article in articles %}
             <section class="articlediv" style="border: 1px solid #ccc; border-radius: 2%;">
-                <a href="{% url 'core:article' pk=article.id slug=article.slug %}">                    
-                    <div class="articlesec">
-                        <div style="width: 100%; height: auto; object-fit: cover;">
-                            {% if article.featureimageURI %}
-                            <img  class="blogimage" src="{{ article.featureimageURI }}" alt="{{ article.title }}">
-                            {% else %}
-                            <img  class="blogimage" src="{{ article.featureimage.url }}" alt="{{ article.title }}">
-                            {% endif %}
-                        </div>
-                        <div class="blogmeta">
-                            <p class="blogcategory">{{ article.category }}</p>
-                            <h3 class="blogtitle">{{ article.title }}</h3>
-                            {% if article.extract %}
-                            <p class="blogextract">{{ article.extract  }}</p>
-                            {% else %}
-                            <p class="blogextract">{{ article.content | safe | truncatewords:24   }}</p>
-                            {% endif %}
-                            <p class="blogdate">{{ article.publishdate }}</p>
-                        </div>
+                <a class="articlesec" href="{% url 'core:article' pk=article.id slug=article.slug %}">                    
+                    <div style="width: 100%; height: auto; object-fit: cover;">
+                        {% if article.featureimageURI %}
+                        <img  class="blogimage" src="{{ article.featureimageURI }}" alt="{{ article.title }}">
+                        {% else %}
+                        <img  class="blogimage" src="{{ article.featureimage.url }}" alt="{{ article.title }}">
+                        {% endif %}
+                    </div>
+                    <div class="blogmeta">
+                        <p class="blogcategory">{{ article.category }}</p>
+                        <h3 class="blogtitle">{{ article.title }}</h3>
+                        {% if article.extract %}
+                        <p class="extract" style="color: #ccc;">{{ article.extract  }}</p>
+                        {% else %}
+                        <p class="extract" style="color: #ccc;">{{ article.content | safe | truncatewords:24 }}</p>
+                        {% endif %}
+                        <p class="blogdate">{{ article.publishdate }}</p>
                     </div>
                 </a>
             </section>
