--- a/static/core/blog.css
+++ b/static/core/blog.css
@@ -34,16 +34,14 @@
 .articlediv {
     filter: grayscale();
     transition: 300ms;
-    text-decoration: none;
 }
 .articlediv:hover {
     filter: none;
-    text-decoration: none;
 }
-.articlediv > a, a:hover {
+.articlesec,
+.articlesec:hover {
+    color: #ccc;
     text-decoration: none;
-}
-.articlesec {
     margin: 3%;
     display: grid;
     grid-column: 1fr;
@@ -66,6 +64,7 @@
     font-size: 10px;
     font-weight: 400;
     text-transform: uppercase;
+    filter: none;
 }
 .blogtitle {
     color: #FFFFFF;
@@ -73,13 +72,15 @@
     font-weight: bold;
     text-transform: uppercase;
     line-height: 1.4rem;
+    filter: none;
 }
-.blogextract {
-    color: #FFFFFF;
+.extract {
+    color: #ccc;
     font-size: 13px;
     font-weight: 400;
     line-height: 1rem;
     text-decoration: none;
+    filter: none;
 }
 .blogdate {
     color: gray;
@@ -116,7 +117,7 @@ button {
         grid-template-columns: 1fr 1fr;
         grid-gap: 18px;
     }
-    .articlediv {
+    .articlesec {
         filter: none;
     }
 }
@@ -128,9 +129,6 @@ button {
         grid-template-columns: 1fr;
         grid-gap: 20px;
         margin: 30px 0 0 0;
-    }
-    .articlediv {
-        filter: none;
     }
 }
 
@@ -149,7 +147,8 @@ footer {
     display: flex;
     grid-gap: 10px;
 }
-footer > a, a:hover {
+footer a,
+footer a:hover {
     color: #fff;
     font-size: 11px;
     text-decoration: none;
