--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -71,6 +71,7 @@
                         <a href="https://ra.co/dj/lerb/" target="_blank" >TOUR DATES</a>
                         <a href="{% url 'core:blog' %}">BLOG</a>
                         <a href="{% url 'core:podcast' %}">PODCAST</a>
+                        <a href="#" style="text-decoration: line-through;">SHOP NOW</a>
                         {% if user.is_authenticated %}
                         <a href="{% url 'account:logout' %}">LOG OUT</a>
                         {% else %}
